<resources>
    <string name="authority_package">com.app.gorent</string>
    <string name="app_name">GoRent</string>

    <!-- Strings related to fields-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_delivery_date">Delivery date</string>
    <string name="prompt_current_date">Current date</string>
    <string name="prompt_item_name">Item name</string>
    <string name="prompt_item_description">Description</string>
    <string name="prompt_item_price">Price</string>
    <string name="prompt_return_date">Return date</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_search_item">Search an item</string>

    <!-- Strings related to buttons -->
    <string name="action_sign_in">Already a member? Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Don\'t have an account? Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_rent">Rent</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_update">update</string>
    <string name="action_delete">delete</string>

    <string name="welcome">"Welcome"</string>
    <!-- Strings related to errors -->
    <string name="invalid_name">Not a valid full name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirmation_password">Passwords don\'t match</string>
    <string name="invalid_delivery_date">Delivery date must be after the current date</string>
    <string name="invalid_item_name">Not a valid item name</string>
    <string name="invalid_item_description">Not a valid description</string>
    <string name="invalid_item_price">Not a valid price</string>
    <string name="invalid_item_fee_type">Not a valid fee type</string>
    <string name="invalid_item_category">Not a valid category</string>

    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="error_signing_up">Error signing up</string>
    <string name="server_error_message">Error connecting to the server. Please try again</string>
    <string name="rental_failed">Error trying to rent the item. Please try again</string>
    <string name="error_logging_in">Error logging in</string>
    <string name="error_email_already_taken">Whoops!!. Email has been already taken!</string>
    <string name="error_item_not_found">Item not found</string>
    <string name="error_item_owner_not_found">Item owner not found</string>
    <string name="error_category_not_found">Category not found</string>
    <string name="error_renting_item">An error occurred while renting item. Please try later</string>
    <string name="error_returning_item">An error occurred while returning item. Please try later</string>
    <string name="error_updating_item">An error occurred while updating item</string>
    <string name="error_saving_item">An error occurred while saving item</string>

    <string name="item_creation_failed">Item creation failed. Try again</string>
    <!-- Strings related to Drawer Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_item_info">Item details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- Strings related to titles-->
    <string name="title_rent_form">Filling out rental form</string>

    <!-- Strings related to title activities -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_rent">Rent</string>
    <string name="menu_rented_items">Renting history</string>
    <string name="menu_lend">My stuff</string>
    <string name="menu_lent_items">Lending history</string>
    <string name="menu_account">My account</string>
    <string name="menu_help">Help</string>
    <string name="title_new_item_form">Publish your item</string>
    <string name="title_item_information">Item</string>
    <string name="title_edit_item">Edit item</string>

    <!-- Shared preferences -->
    <string name="preference_file_key">preferences-file</string>

    <string name="action_filter">Filter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- credits -->
    <string name="university">Instituto Tecnológico de Toluca</string>
    <string name="title_credits">Credits</string>
    <string name="student">Juan Camilo Velandia Botello</string>
    <string name="studen_label">Estudiantes</string>
    <string name="professor_label">Profesor</string>
    <string name="profesor">M. en C. Rocio Elizabeth Pulido Alba</string>
    <string name="major_label">Carrera:</string>
    <string name="major">TICs e Ingeniería en Sistemas Computacionales</string>
    <string name="class_name">Desarrollo de Aplicaciones Móviles</string>
    <string name="class_label">Materia:</string>
    <string name="semester">Semestre: Enero - Junio</string>
    <string name="grupo">grupo: Sist-Tics</string>
    <string name="ciclo">Ciclo escolar 2020</string>
    <string name="student2">Juan Jose Hernandez Arreola</string>
    <string name="student3">Arantza Reveles Nieto</string>
    <string name="label_rental_information">Rental information</string>
    <string name="error_item_has_history">The item cannot be deleted because it has a lending history</string>
    <string name="invalid_address">Invalid address</string>
    <string name="error_item_is_already_rented">Item is already rented!</string>
    <string name="title_return_item">Return item</string>
    <string name="action_return">Return item</string>
    <string name="error_item_lending_not_found">Item lending not found</string>
    <string name="error_image_not_found">Image not found</string>
    <string name="error_uploading_image">An error occurred while uploading image</string>
    <string name="error_retrieving_items">An error occurred while retrieving items</string>
    <string name="error_deleting_item">An error occurred while deleting item</string>
    <string name="error_retrieving_item_lending_history">An error occurred while retrieving lending history</string>
    <string name="error_retrieving_lending_history">An error occurred while retrieving lending history</string>
    <string name="error_retrieving_renting_history">An error was occurred while retrieving renting history</string>
    <string name="developed_by">Developed by</string>
    <string name="copyright">Copyright © 2020</string>
    <string name="error_retrieving_categories">An error occured while retrieving categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_web">Web</string>
    <string name="error_user_not_found">Error, user not found</string>
    <string name="error_internet_connection">Oops. Looks like you\'re not connected! Try again later.</string>
    <string name="error_not_supported_yet">Error, not supported yet!</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_items">Items</string>
    <string name="title_items">Items</string>
    <string name="title_item_lending_history">Lending History</string>
    <string name="label_home">Don\'t worry! We lend you things you need to work at home!</string>

</resources>
