<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_featured_play_list_black_24dp"
            android:title="@string/menu_rented_items" />

        <item
            android:id="@+id/nav_item_lending_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/item_lending_history" />

    </group>

    <group android:id="@+id/menu_group2">

        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/title_web"/>

        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="@string/title_credits"
            />

    </group>

</menu>
