<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.item_information.ItemInformationActivity">

    <LinearLayout
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/create_item_form_iv_picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/camera"
            android:focusable="false"
            android:enabled="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_item_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_item_name"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:focusable="false"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_item_form_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_item_description"
                android:inputType="text"
                android:focusable="false"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_item_form_price"
                android:focusable="false"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_item_price"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:focusable="false"
            android:id="@+id/create_item_form_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/categories" />

        <LinearLayout
            android:id="@+id/item_information_layout_update_buttons"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/action_update"
                android:id="@+id/item_information_btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round"
                android:textColor="#FFFFFF"
                android:layout_weight="1"/>

            <Button
                android:layout_margin="5dp"
                android:enabled="false"
                android:text="@string/action_cancel"
                android:id="@+id/item_information_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_button_round"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>